# cubix

./: .gitignore  .gitlab-ci.yml  .gitmodules  133Ba.sou  137Cs.cal  208Tl.sou  226Ra.cal  22Na.sou  40K-208Tl.cal  57Co.sou  CMakeLists.txt
cmake/: CubixConfig.cmake.in  GenerateROOTLibrary.cmake  cubix_config.h.cmake
cmake/scripts/: cubix-autocompletion.sh  cubix-autocompletion.zsh  cubix-config.in  thiscubix.csh.cmake  thiscubix.sh.cmake  thiscubix.zsh.cmake
conf/: CubeBuilder.conf  cubixrc
databases/Sources/: 11B-6770.cal  133Ba.source  134Cs.sou  134Cs.source  137Cs.source  152Eu.sou  152Eu.source  208Pb.source  22Na.source  241Am.sou  241Am.source  28Al.source  40K-56Co-60Co.cal  40K.cal  40K.sou  56Co-60Co-152Eu.cal  56Co.sou  56Co.source  60Co.sou  60Co.source  88Y.sou  88Y.source
documentation/: clean_doxygen.sh  cubix-dox-file.cfg  make_doxygen.sh
documentation/css/: doxygen-awesome-sidebar-only.css  doxygen-awesome.css
documentation/layout/: DoxygenLayout.xml  headerFile
documentation/mdfiles/: data.md  execs.md  gallery.md  install.md  link.md  main.md  release_notes.md  userguide.md
documentation/mdfiles/examples/: benford.md  decay_generator.md  deformation.md  draw_FY.md  draw_binding.md  draw_mass_excess.md  draw_r42.md  draw_xrays.md  examples.md  list_BE2_WU.md  macro_explore.md  tkn-exec.md  tkn-thread-example.md
documentation/mdfiles/old/userguide/: dataset.md  dbmanager.md  decay.md  measure.md  nucleus.md  units.md
documentation/mdfiles/userguide/: gui_interface.md  levels.md
exec/: CubeBuilder.cpp  cubix.cpp  trans-prob-calc.cpp
icons/: FitTool.xpm  levelscheme.xpm
src/: my_prog.cpp  my_prog_ROOT.cpp
src/core/: CMakeLists.txt  CXBashColor.cpp  CXBashColor.h  CXProgressBar.cpp  CXProgressBar.h  LinkDef.h
src/gui/: CMakeLists.txt  CXAngCorrPlayer.cpp  CXAngCorrPlayer.h  CXArrow.cpp  CXArrow.h  CXBgdFit.cpp  CXBgdFit.h  CXBgdUtility.cpp  CXBgdUtility.h  CXCanvas.cpp  CXCanvas.h  CXDialogBox.cpp  CXDialogBox.h  CXENSDFLevelSchemePlayer.cpp  CXENSDFLevelSchemePlayer.h  CXFileList.cpp  CXFileList.h  CXFit.cpp  CXFit.h  CXFitEfficiency.cpp  CXFitEfficiency.h  CXGFileBrowser.cpp  CXGFileBrowser.h  CXGammaSearch.cpp  CXGammaSearch.h  CXGateBox.cpp  CXGateBox.h  CXGuiENSDFPlayer.cpp  CXGuiENSDFPlayer.h  CXGuiLSPlayer.cpp  CXGuiLSPlayer.h  CXGuiToolbar.cpp  CXGuiToolbar.h  CXHist1DCalib.cpp  CXHist1DCalib.h  CXHist1DPlayer.cpp  CXHist1DPlayer.h  CXHist2DPlayer.cpp  CXHist2DPlayer.h  CXLevelSchemePlayer.cpp  (+22 more)
src/radware_interface/: CMakeLists.txt  CXRadInterface.cpp  CXRadInterface.h  CXRadReader.cpp  CXRadReader.h  LinkDef.h
src/tools/: CMakeLists.txt  CXFitFunctions.h  CXFitSpek.cpp  CXFitSpek.h  CXGammaSource.cpp  CXGammaSource.h  CXHistoManipulator.cpp  CXHistoManipulator.h  CXRecalEnergy.cpp  CXRecalEnergy.h  CXSpreadIntensityMatrix.cpp  CXSpreadIntensityMatrix.h  LinkDef.h
